feat: update contest table component

--- a/src/content/contests/202504_midnight_flag_ctf.mdx
+++ b/src/content/contests/202504_midnight_flag_ctf.mdx
@@ -4,8 +4,7 @@ startDate: 2025-04-12 17:00
 endDate: 2025-04-14 01:00
 result: 27th (all), 12th (students)
 highlighted: true
-tags:
-    - writeup
+tags: []
 members:
     - chizuchizu
     - naotiki
