--- a/src/content/contests/202504_midnight_flag_ctf.mdx
+++ b/src/content/contests/202504_midnight_flag_ctf.mdx
@@ -2,10 +2,9 @@
 title: Midnight Flag CTF - Insurrection
 startDate: 2025-04-12 17:00
 endDate: 2025-04-14 01:00
-result: 27 (all), 12 (students)
+result: 27th (all), 12th (students)
 highlighted: true
-tags:
-    - writeup
+tags: []
 members:
     - chizuchizu
     - naotiki
